--- a/app/src/renderer/styles/theme-dark/_sidebar.scss
+++ b/app/src/renderer/styles/theme-dark/_sidebar.scss
@@ -2,7 +2,7 @@ html.dark-mode #react-root main {
   background-color: $darkLight;
 }
 
-html.dark-mode #react-root header,
+html.dark-mode #react-root header._sq5zx,
 html.dark-mode #react-root ._f4a0g {
   background-color: $darkLight;
 }
